# DuetORAM

./: .gitignore  CMakeLists.txt  OPTIMIZATION_SUMMARY.md  README.md
include/: AESNIWrapper.hpp  CPUFeatures.hpp  ClientDuetORAM.hpp  DuetORAM.hpp  SecretSharedShuffle.hpp  ServerDuetORAM.hpp  Utils.hpp  config.h  struct_block.h  struct_socket.h  struct_thread_computation.h  struct_thread_loadData.h
src/: CPUFeatures.cpp  ClientDuetORAM.cpp  DuetORAM.cpp  SecretSharedShuffle.cpp  ServerDuetORAM.cpp  Utils.cpp  main.cpp
